--- a/springboot-crud-api-restfull/src/main/resources/application.properties
+++ b/springboot-crud-api-restfull/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=springboot-crud-api-restfull
+
+
+# Configuración de la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/db_jpa_crud?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de JPA (opcional, si usas JPA)
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
