--- a/springboot-crud-api-restfull/src/main/resources/application.properties
+++ b/springboot-crud-api-restfull/src/main/resources/application.properties
@@ -6,8 +6,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_jpa_crud?useSSL=false&serve
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8081
 
 # Configuración de JPA (opcional, si usas JPA)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+
