spring.messages.basename=personalizedMessages, lo que hace es decirle a Spring que escanee o lea ese archivo que posteriormente va a ser usado, en las validaciones de cada atributo que se encuentra en los dtos, que son mensajes personalizados.

--- a/springboot-crud-api-restfull/src/main/resources/application.properties
+++ b/springboot-crud-api-restfull/src/main/resources/application.properties
@@ -13,4 +13,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+# Indica a Spring el fichero .properties que contiene los mensajes personalizados.
+spring.messages.basename=personalizedMessages
+
+spring.messages.encoding=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
 
