--- a/springboot-crud-api-restfull/src/main/resources/application.properties
+++ b/springboot-crud-api-restfull/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8081
 
 # Configuración de JPA (opcional, si usas JPA)
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
