Añadiendo mensajes personalizados.

--- a/springboot-crud-api-restfull/src/main/resources/personalizedMessages.properties
+++ b/springboot-crud-api-restfull/src/main/resources/personalizedMessages.properties
@@ -1,9 +1,12 @@
 productUpdateDto.name.size=Es requerido!!!
 productUpdateDto.price.positive=Debe ser mayor a cero, por favor.
 productUpdateDto.description.size=Mínimo debe tener {min} caracteres.
+productUpdateDto.sku.existsSku=Ya existe, coloca otro valor.
+productUpdateDto.sku.notBlank=No puede ser nulo, ni vacio este campo.
 
 productCreateDto.name.notBlank=No puede estar vacío.
 productCreateDto.name.size=Debe tener entre {min} y {max} caracteres.
 productCreateDto.price.positive=Debe ser mayor a cero.
 productCreateDto.description.size=Debe tener como mínimo {min} caracteres.
 productCreateDto.description.notBlank=No puede estar vacío.
+productCreateDto.sku.notBlank =Este campo no puede estar vacio.
