--- a/springboot-crud-api-restfull/pom.xml
+++ b/springboot-crud-api-restfull/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
